# aiida-pyscf

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
src/aiida_pyscf/: __init__.py
src/aiida_pyscf/calculations/: __init__.py  base.py
src/aiida_pyscf/calculations/templates/: cubegen.py.j2  density_cube.py.j2  fcidump.py.j2  geometric_log.ini  geometry_optimizer.py.j2  hessian.py.j2  mean_field.py.j2  mep_cube.py.j2  optimizer.py.j2  results.py.j2  script.py.j2  structure.py.j2
src/aiida_pyscf/parsers/: __init__.py  base.py
src/aiida_pyscf/workflows/: __init__.py  base.py
tests/: conftest.py  test_integration.py  test_version.py
tests/calculations/: __init__.py  test_base.py
tests/calculations/test_base/: test_checkpoint.pyr  test_default.pyr  test_filter_render_python.pyr  test_parameters_cubegen.pyr  test_parameters_cubegen_parameters0_.pyr  test_parameters_cubegen_parameters1_.pyr  test_parameters_cubegen_parameters2_.pyr  test_parameters_cubegen_parameters3_.pyr  test_parameters_fcidump.pyr  test_parameters_geometry_optimizer.pyr  test_parameters_hessian.pyr  test_parameters_mean_field.pyr  test_parameters_mean_field_localize_orbitals.pyr  test_parameters_optimizer.pyr  test_parameters_pickle_model.pyr  test_parameters_structure.pyr
tests/parsers/: __init__.py  test_base.py
tests/parsers/fixtures/base/cubegen/: mep.cube  mo_5.cube
tests/parsers/fixtures/base/default/: aiida.out  results.json
tests/parsers/fixtures/base/failed_electronic_convergence/: checkpoint.chk  results.json
tests/parsers/fixtures/base/failed_execution/: aiida.err
tests/parsers/fixtures/base/failed_missing_result/: aiida.out
tests/parsers/fixtures/base/failed_out_of_walltime/: _scheduler-stderr.txt
tests/parsers/fixtures/base/fcidump/: results.json
tests/parsers/fixtures/base/model_invalid/: model.pickle
tests/parsers/fixtures/base/model_valid/: aiida.out  model.pickle  results.json
tests/parsers/fixtures/base/relax/: results.json  tmpdeadbeef_optim.xyz
tests/parsers/test_base/: test_default.yml  test_relax.yml
tests/test_integration/: test_pyscf_base_geometry_optimization.csv  test_pyscf_base_geometry_optimization.yml  test_pyscf_base_mean_field.csv  test_pyscf_base_mean_field.yml
tests/workflows/: test_base.py
